Single makefile for every containers, allow pull command

--- a/docker/boxes/debian-jessie/Makefile
+++ b/docker/boxes/debian-jessie/Makefile
@@ -1,9 +1,1 @@
-IMAGE=aeriscloud/ansible-debian
-TAGS=8 jessie latest
-
-.PHONY: all
-
-all: $(TAGS)
-
-$(TAGS):
-	docker build -t $(IMAGE):$@ .
+../../Makefile
