--- a/docker/boxes/debian-wheezy/Makefile
+++ b/docker/boxes/debian-wheezy/Makefile
@@ -1,9 +1,1 @@
-IMAGE=aeriscloud/ansible-debian
-TAGS=7 wheezy
-
-.PHONY: all
-
-all: $(TAGS)
-
-$(TAGS):
-	docker build -t $(IMAGE):$@ .
+../../Makefile
