--- a/docker/boxes/ubuntu-trusty/Makefile
+++ b/docker/boxes/ubuntu-trusty/Makefile
@@ -1,9 +1,1 @@
-IMAGE=aeriscloud/ansible-ubuntu
-TAGS=14.04 trusty lts
-
-.PHONY: all
-
-all: $(TAGS)
-
-$(TAGS):
-	docker build -t $(IMAGE):$@ .
+../../Makefile
