--- a/docker/boxes/centos7/Makefile
+++ b/docker/boxes/centos7/Makefile
@@ -1,9 +1,1 @@
-IMAGE=aeriscloud/ansible-centos
-TAGS=7 latest
-
-.PHONY: all
-
-all: $(TAGS)
-
-$(TAGS):
-	docker build -t $(IMAGE):$@ .
+../../Makefile
