--- a/docker/boxes/ubuntu-vivid/Makefile
+++ b/docker/boxes/ubuntu-vivid/Makefile
@@ -1,9 +1,1 @@
-IMAGE=aeriscloud/ansible-ubuntu
-TAGS=15.04 15 vivid latest
-
-.PHONY: all
-
-all: $(TAGS)
-
-$(TAGS):
-	docker build -t $(IMAGE):$@ .
+../../Makefile
