Switch centos7 to systemd

--- a/docker/boxes/centos7/Dockerfile
+++ b/docker/boxes/centos7/Dockerfile
@@ -20,6 +20,7 @@ RUN echo 'ansible	ALL=(ALL)	NOPASSWD: ALL' >> /etc/sudoers
 # Install sshd and generate ssh keys
 RUN yum -y install openssh-server
 RUN sshd-keygen || true
+RUN systemctl enable sshd
 
 # Cleanup
 RUN yum clean all
@@ -27,7 +28,8 @@ RUN yum clean all
 # Cache some folders
 VOLUME /var/cache/yum
 VOLUME /var/lib/yum
+VOLUME /sys/fs/cgroup
 
 # Expose SSH
 EXPOSE 22
-CMD ["/usr/sbin/sshd", "-D"]
+CMD ["/sbin/init"]
