Documentation, DOCKER_OPTS and save unreachable

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,5 +1,6 @@
 include meta
 
+DOCKER_OPTS ?= 
 TAGS_PULL = $(patsubst %,%-pull,$(TAGS))
 
 .PHONY: all pull $(TAGS) $(TAGS_PULL)
@@ -9,7 +10,7 @@ all: $(TAGS)
 pull: $(TAGS_PULL)
 
 $(TAGS):
-	docker build -t $(IMAGE):$@ .
+	docker build $(DOCKER_OPTS) -t $(IMAGE):$@ .
 
 $(TAGS_PULL):
 	docker pull $(IMAGE):$(patsubst %-pull,%,$@)
