--- a/docker/ansible/Dockerfile
+++ b/docker/ansible/Dockerfile
@@ -1,7 +1,15 @@
-FROM python:2.7
+FROM ubuntu
 
+RUN apt-get update \
+    && apt-get install -y python \
+                          python-dev \
+                          python-setuptools \
+                          python-pip \
+                          python-virtualenv \
+                          sshpass \
+                          git \
+    && rm -rf /var/cache/apt/* /var/lib/apt/lists/*
 RUN pip install ansible
-RUN apt-get update && apt-get install sshpass && rm -rf /var/cache/apt/* /var/lib/apt/lists/*
 RUN echo "[defaults]\nhost_key_checking = False" > ~/.ansible.cfg
 RUN mkdir ~/.ssh && echo "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
 RUN mkdir -p /etc/ansible/plugins/callback_plugins
